# ByteKart-BE

./: .dockerignore  .env  .gitignore  Dockerfile  auth.py  cache.py  db.py  docker-compose.yml  main.py  migrate.py  migrate_combinations.py  models.py  pyproject.toml  requirements.txt  test_booking.py
helpers/: email_service.py  recreate_db.py  seed_categories.py  seed_listing.py  seed_subcategory.py  verify_payment_sig.py
public/email_template/: order.html  order_delivered.html  order_placed.html  order_shipped.html  order_status.html  our_thanks.html  return_status.html  thanks_after_delivery.html
routers/: admin.py  orders.py  public.py  redeem_codes.py  returns.py  support.py  users.py
